# koishi-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/koishi/: __init__.py  adapter.py  bot.py  command.py  context.py  element.py  models.py  session.py
src/koishi_python/: __init__.py  typing.py
